fixed twitter banner layout issue on buzz page

--- a/css/style.css
+++ b/css/style.css
@@ -588,7 +588,7 @@ hr { border: solid #cdcdcd; border-width: 1px 0 0; clear: both; margin: 12px 30p
     margin-left: 10px;
 }
 
-.trainCompartment a, .trainCompartmentLong a {
+.trainCompartment > a, .trainCompartmentLong > a {
     display: block;
 }
 
